updated diagram generator

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 
 <body>
   <nav class="fixed-nav-bar">
-    <a class="brand" href="/neufit-design/#default">
+    <a class="brand" href="#default">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Poundexclam.svg/2000px-Poundexclam.svg.png" />
     </a>
-    <a class="link" href="/neufit-design/#editor">Swagger Editor</a>
-    <a class="link" href="/neufit-design/#static">Simple static API doc</a>
-    <a class="link" href="/neufit-design/#redoc">Ruby generated API doc</a>
-    <a class="link" href="/neufit-design/#multitab">Multitab API doc</a>
-    <a class="link" href="/neufit-design/#raw">Raw openapi spec</a>
+    <a class="link" href="#editor">Swagger Editor</a>
+    <a class="link" href="#static">Simple static API doc</a>
+    <a class="link" href="#redoc">Ruby generated API doc</a>
+    <a class="link" href="#multitab">Multitab API doc</a>
+    <a class="link" href="#raw">Raw openapi spec</a>
   </nav>
   <div id="default" class="hero-text-landing">
     <p>
@@ -139,19 +139,19 @@
   </div>
   <div class="container">
     <h2 class="embed-heading" id="editor">Swagger Editor</h2>
-    <embed class="main-doc" src="/neufit-design/src/editor/index.html">
+    <embed class="main-doc" src="src/editor/index.html">
   </div>
   <div class="container">
     <h2 class="embed-heading" id="multitab">Multitab API doc</h2>
-    <embed class="main-doc" src="/neufit-design/src/multitab/index.html">
+    <embed class="main-doc" src="src/multitab/index.html">
   </div>
   <div class="container">
     <h2 class="embed-heading" id="redoc">Ruby generated API doc</h2>
-    <embed class="main-doc" src="/neufit-design/src/redoc/index.html">
+    <embed class="main-doc" src="src/redoc/index.html">
   </div>
   <div class="container">
     <h2 class="embed-heading" id="static">Simple static API doc</h2>
-    <embed class="main-doc" src="/neufit-design/src/static/index.html">
+    <embed class="main-doc" src="src/static/index.html">
   </div>
   <div class="container">
     <h2 class="embed-heading" id="raw">Raw openapi spec</h2>
