updated flow docs

--- a/src/redoc/index.html
+++ b/src/redoc/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='../../swagger.yaml'></redoc>
+    <redoc spec-url='../../docs/swagger.yaml'></redoc>
     <script>
       console.log('LOAD: redoc');
     </script>
