--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       height: 100vh;
       display: none;
     }
+
     .embed-heading:not(:target) {
       display: none;
     }
@@ -113,6 +114,9 @@
       /* z-index: -1; */
     }
 
+    #zoomImg {
+      width: 100vw;
+    }
   </style>
   <script>
     if (!window.location.hash) {
@@ -131,6 +135,7 @@
     <a class="link" href="#redoc">Ruby generated API doc</a>
     <a class="link" href="#multitab">Multitab API doc</a>
     <a class="link" href="#raw">Raw openapi spec</a>
+    <a class="link" href="#plantuml">Plant UML diagram</a>
   </nav>
   <div id="default" class="hero-text-landing">
     <p>
@@ -155,7 +160,12 @@
   </div>
   <div class="container">
     <h2 class="embed-heading" id="raw">Raw openapi spec</h2>
-    <embed class="main-doc" src="swagger.yaml">
+    <embed class="main-doc" src="docs/swagger.yaml">
+  </div>
+  <div class="container">
+    <h2 class="embed-heading" id="plantuml" style="visibility: hidden;height: 0px;margin:0;margin-top:-30px;">Plant UML diagram</h2>
+    <img id="zoomImg" class="main-doc" src="docs/_swagger.png">
+    <script type="text/javascript" src="src/main.js"></script>
   </div>
 </body>
 
